Make :active hierarchical.  b=65917  r+sr=bzbarsky